src/objects/SPE_Spend__c.object
<CustomObject>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EnterpriseId</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spends</relationshipLabel>
        <relationshipName>Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nego_Responsible__c</fullName>
        <label>Nego Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>R+G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPeriod__c</fullName>
        <label>SPE Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpendScopeCombination__c</fullName>
        <description>All Spend Scope Combinations</description>
        <label>Spend Scope Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend__c</fullName>
        <label>Spend</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <label>Supplier Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WBSElements__c</fullName>
        <label>WBS Elements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EnterpriseId__c</columns>
        <columns>CategoryGroup__c</columns>
        <columns>CategoryArea__c</columns>
        <columns>Category__c</columns>
        <columns>Spend__c</columns>
        <columns>Period__c</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region__c</columns>
        <columns>Country__c</columns>
        <columns>Project__c</columns>
        <columns>Nego_Responsible__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SPEPeriod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>SpendId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>